--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@sendgrid/mail": "^7.7.0",
     "axios": "^1.2.2",
+    "dayjs": "^1.11.7",
     "isomorphic-unfetch": "^3.1.0",
     "moment": "^2.29.4",
     "next": "13.0.7",
