--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "dayjs": "^1.11.7",
     "isomorphic-unfetch": "^3.1.0",
     "moment": "^2.29.4",
-    "next": "13.0.7",
+    "next": "^13.1.2",
     "next-seo": "^5.15.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
+    "react-router": "^6.6.2",
     "swr": "^2.0.0",
     "wpapi": "^1.2.2"
   },
